# tg-tldr

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-02-20-per-group-prompt-design.md  2026-02-20-per-group-prompt-plan.md
src/tg_tldr/: __init__.py  __main__.py  collector.py  config.py  db.py  scheduler.py  search.py  summarizer.py
tests/: test_ai_connectivity.py  test_db_search.py  test_prompt.py  test_search.py  test_summarizer_content_blocks.py
