[project]
name = "tg-tldr"
version = "0.1.0"
description = "Telegram group chat recorder with daily AI-powered summaries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36.0",
    "anthropic>=0.40.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
tg-tldr = "tg_tldr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_tldr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
